backend some changes